🔧 Fix Settings and Help functionality
Features Added:
- Integrated SettingsPanel and HelpDialog components
- Added comprehensive settings management with SettingsService
- Implemented persistent settings storage using localStorage
- Added onClick handlers for Settings and Help buttons

Project Updates:
- Added sample test files (smaller video file for testing)
- Updated .gitignore to exclude large files (>50MB)
- Enhanced project structure and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,17 @@ release/
 # Temporary files
 *.tmp
 *.temp
+
+# Large test files (>50MB) - GitHub limit is 100MB
+*.mp4
+*.mov
+*.avi
+*.mkv
+*.webm
+*.flv
+*.wmv
+*.m4v
+*.3gp
+TestFiles/Videos/*.mp4
+TestFiles/Videos/*.mov
+TestFiles/Videos/*.avi
